--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {% include 'css.html' %}
-    <title>Tomasz Mazurek | Portfolio</title>
+    <title>Tom Mazurek | Portfolio</title>
   </head>
   <body style="background-color: rgb(0,21,41)">
     <noscript>You need to enable JavaScript to run this app.</noscript>
