refactor: new install

--- a/backend/src/templates/js.html
+++ b/backend/src/templates/js.html
@@ -1,5 +1,5 @@
 {% load static %}
 
-<script src="{% static 'static/js/2.4d8cb9d0.chunk.js' %}"></script>
-<script src="{% static 'static/js/main.ddf3a1e9.chunk.js' %}"></script>
-<script src="{% static 'static/js/runtime-main.7e4b9196.js' %}"></script>
+<script src="{% static 'js/2.b2fc28ab.chunk.js' %}"></script>
+<script src="{% static 'js/main.02db161a.chunk.js' %}"></script>
+<script src="{% static 'js/runtime-main.f027f2bf.js' %}"></script>
