--- a/backend/src/templates/css.html
+++ b/backend/src/templates/css.html
@@ -2,5 +2,5 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-<link rel='stylesheet' type="text/css" href="{% static 'static/css/2.35fcc229.chunk.css' %}" />
-<link rel='stylesheet' type="text/css" href="{% static 'static/css/main.c5bd0843.chunk.css' %}" />
+<link rel='stylesheet' type="text/css" href="{% static 'css/2.6f9aa85b.chunk.css' %}" />
+<link rel='stylesheet' type="text/css" href="{% static 'css/main.b037b5e1.chunk.css' %}" />
